fix: button face disabled样式调整
Change-Id: I8233ee96accfa6327583c58ebb7a66bb0b599c21

--- a/packages/ui/button/src/index.less
+++ b/packages/ui/button/src/index.less
@@ -90,6 +90,12 @@
             background-color: ~"var(--color-@{face}-1)";
             border-color: ~"var(--theme-@{face}-color-hover)";
         }
+
+        &[disabled] {
+            color: ~"var(--color-@{face}-3)";
+            background-color: ~"var(--color-@{face}-1)";
+            border-color: ~"var(--color-@{face}-2)";
+        }
     }
 
     .@{osui-button-class-prefix}.@{ant-prefix}-btn-primary.@{osui-button-class-prefix}-face-@{face} {
@@ -111,6 +117,12 @@
             color: var(--color-gray-1);
             background-color: ~"var(--theme-@{face}-color-active)";
             border-color: ~"var(--theme-@{face}-color-active)";
+        }
+
+        &[disabled] {
+            color: ~"var(--color-gray-1)";
+            background-color: ~"var(--color-@{face}-2)";
+            border-color: ~"var(--color-@{face}-2)";
         }
     }
 
