fix: 冻结规范样式调整
Change-Id: I09af648636acf48c9cce486c578196fd655a3395

--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -173,6 +173,7 @@
 @btn-padding-horizontal-base: 16px;
 @btn-padding-horizontal-lg: 24px;
 @btn-padding-horizontal-sm: 12px;
+@btn-text-shadow: none;
 
 // Tooltip
 // ---
@@ -235,7 +236,9 @@
 @radio-focus-shadow: 0 0 0 0 var(--theme-border-focus-color);
 @radio-duration: 0;
 @radio-button-hover-color: var(--radio-button-hover-color);
-@radio-dot-size: 10px;
+@radio-dot-size: 8px;
+@radio-button-hover-color: var(--theme-primary-color-hover);
+@radio-button-active-color: var(--theme-primary-color-active);
 
 // Modal
 // ---
@@ -294,6 +297,7 @@
 // Badge
 // --
 @badge-height: 16px;
+@badge-dot-size: 8px;
 
 // Breadcrumb
 // ---
