--- a/packages/ui/switch/src/index.less
+++ b/packages/ui/switch/src/index.less
@@ -15,6 +15,10 @@
         }
     }
 
+    .@{ant-prefix}-switch-loading-icon {
+        vertical-align: top;
+    }
+
     &.@{ant-prefix}-switch-disabled {
         opacity: var(--switch-disabled-opacity);
 
