--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -192,7 +192,6 @@
 // ---
 @label-color: var(--color-gray-9);
 @form-item-margin-bottom: 20px;
-@form-error-input-bg: var(--color-error-1);
 
 // Tabs
 // ---
@@ -233,7 +232,7 @@
 
 // Radio
 // ---
-@radio-focus-shadow: 0 0 0 0 var(--theme-border-focus-color);
+@radio-focus-shadow: 0 0 0 0 transparent;
 @radio-duration: 0;
 @radio-button-hover-color: var(--radio-button-hover-color);
 @radio-dot-size: 8px;
