--- a/packages/ui-theme/osui-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/osui-theme/patches/antd-vars-patch.less
@@ -164,7 +164,7 @@
 // Outline
 // ---
 @outline-width: 1px;
-@outline-blur-size: 0px;
+@outline-blur-size: 0;
 @outline-color: var(--theme-border-focus-color);
 
 // Form
