--- a/packages/ui/form/src/index.less
+++ b/packages/ui/form/src/index.less
@@ -17,7 +17,7 @@
             height: 16px;
             margin-right: 2px;
             vertical-align: middle;
-            background-color: var(--theme-error-color);
+            background-color: var(--theme-component-bg);
             content: '';
             -webkit-mask: url('./error.svg') no-repeat 50% 50%;
             mask: url('./error.svg') no-repeat 50% 50%;
