fix: 修复tree-select选中颜色
Change-Id: Ib5c7435b903998e90da7207539d8502de48680c9

--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -150,10 +150,10 @@
 @alert-with-description-icon-top: var(--alert-with-description-icon-top);
 
 // Tree
-@tree-directory-selected-color: var(--tree-directory-selected-color, #fff);
-@tree-directory-selected-bg: var(--tree-directory-selected-bg, --theme-primary-color);
-@tree-node-hover-bg: var(--tree-node-hover-bg, --theme-secondary-color-hover);
-@tree-node-selected-bg: var(--tree-node-selected-bg, #dce1fa); // @primary-2
+@tree-directory-selected-color: var(--theme-primary-color);
+@tree-directory-selected-bg: var(--theme-component-bg);
+@tree-node-hover-bg: var(--theme-secondary-color-hover);
+@tree-node-selected-bg: var(--theme-component-bg);
 
 //Button
 // ---
