--- a/packages/ui/table/src/index.less
+++ b/packages/ui/table/src/index.less
@@ -65,12 +65,12 @@
         .@{ant-prefix}-table-thead,
         .@{ant-prefix}-table-row {
             .@{ant-prefix}-table-cell.@{ant-prefix}-table-row-expand-icon-cell:first-child {
-                padding-right: 0;
+                // padding-right: 0;
                 padding-left: 20px;
             }
 
             .@{ant-prefix}-table-cell.@{ant-prefix}-table-selection-column:first-child {
-                padding-right: 0;
+                // padding-right: 0;
                 padding-left: 20px;
             }
         }
